flux/apps/fileflows/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fileflows
  name: fileflows
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://fileflows.multimedia-factory.svc:5000"
    uptime-kuma.io/name: "fileflows"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Storage & Databases"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileflows
  template:
    metadata:
      labels:
        app: fileflows
    spec:
      containers:
        - name: fileflows
          image: revenz/fileflows
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app/common
              name: fileflows-common
            - mountPath: /app/Data
              name: fileflows-data
            - mountPath: /media
              name: fileflows-media
      volumes:
        - name: fileflows-common
          persistentVolumeClaim:
            claimName: fileflows-common
        - name: fileflows-data
          persistentVolumeClaim:
            claimName: fileflows-data
        - name: fileflows-media
          persistentVolumeClaim:
            claimName: fileflows-media
