flux/apps/fileflows/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: fileflows
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:EVCnMN32fsT7sJ2Xt4DRiksBo5x2mNKxHasPHmV9pw==,iv:2u1qyYkZx3qeFNUW5bNNbwpmwp0e+YUiz1wVd8U3xDQ=,tag:/59EsQLj0+/D5thkmk+xsg==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: fileflows
              port: 5000
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMTRkQnFsaHZlTlMxUldB
[...]
            42M0dhm7E5EUfT0AZYnX9HLLNVKR+aR0dWb4yAfq/AjQRzvlEsqnpw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-03T14:40:06Z"
    mac: ENC[AES256_GCM,data:wNPreriBab4PZ3Dy9S3E5hTgzzD1Pvmo9FIHg4hu27f8hLQNP2FRCyhA92qfyaLRaGVqZ6XoH84TVmNyEA3w3DS2d2X4ZeNT+qBSm+OXmh3jomE/5sYB3tB7WduycCusot7ZRvUf5wNbdSSwAD8NUKGKs6KG6VbliE3zdIXdqvQ=,iv:fftSJdGZA//WcPOkptrd+j84FXBfnOu8zJd9gES9MTI=,tag:CqR9KWBipO+3f8I+cWXuhA==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
